[CopyJob] Check free space for remote urls before copying and other improvements

Summary:
Use KIO::FileSystemFreeSpaceJob to check free space for remote urls.

Thanks to sitter for pin-pointing the responsible code in the bug report,
and to kbroulik for pointing out the existence of KIO::FileSystemFreeSpaceJob.

Also use UDSEntry to check writability for both local and remote urls.

BUG: 418443

FIXED-IN: 5.71

Test Plan:
testtrash unit test fails (again...)

- Find/create a local partition with a small capacity, copying a file/dir
  that is bigger than the partition will show the error message as before
- Do the same for a remote url (I tested with sftp://), an error message
  about not having enough free space is shown

Reviewers: #frameworks, dfaure, meven, sitter

Reviewed By: dfaure

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D29485